<resources>
    <string name="app_name">Figos</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_verify_message">Check your inbox.\nYour email needs to be verified before you can login.</string>
    <string name="email_exists_message">Account already exists for this email address. Reset password if you forgot.</string>
    <string name="resend_verification_email">Resend Verification Email</string>

    <string name="invalid_account">No account exists for this email address. Sign up for new account.</string>
    <string name="invalid_password">Invalid password. Please check and retry.</string>
    <string name="login_request_blocked">Too many wrong password attempts. Account blocked. Change password or try later.</string>
    <string name="general_error">Some error occurred. Please try again.</string>

    <string name="emailAdded">emailAdded</string>
    <string name="emailVerified">emailVerified</string>
    <string name="loading_please_wait">Loading… Please wait</string>
    <string name="proceed">Proceed</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="account_already_exists">Account already exists. If you forgot password, you can reset from login screen.</string>
    <string name="have_account_sign_in">Have Account? Sign In</string>
    <string name="choose_password">Choose Password</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="enter_recovery_email">Enter recovery email</string>
    <string name="submit">Submit</string>
    <string name="password_reset_message">Password reset email is sent. Check your inbox.</string>
    <string name="all">All</string>
    <string name="seeds">Seeds</string>
    <string name="pesticides">Pesticides</string>
    <string name="weedicides">Weedicides</string>
    <string name="product">Product</string>
    <string name="quantity_kg">Quantity (Kg)</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="total">Total</string>
    <string name="userProfile">User Profile</string>
    <string name="changeEmail">Change Email</string>
    <string name="saved">Saved</string>
    <string name="changePassword">Change Password</string>
    <string name="name">Name</string>
    <string name="fullNname">Full Name</string>
    <string name="phone">Phone</string>
    <string name="_91">+91</string>
    <string name="phoneFull">Phone (10 Digits)</string>
    <string name="dob">Date of Birth</string>
    <string name="dobFormat">DD/MM/YYYY</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="diet">Diet</string>
    <string name="veg">Veg</string>
    <string name="nonVeg">Non-Veg</string>
    <string name="changePage">Change Page</string>
    <string name="verifyPassword">Verify your current password</string>
    <string name="currentPassword">Current Password</string>
    <string name="verify">Verify</string>
    <string name="emailAddress">Email Address</string>
    <string name="updateEmail">Update Email</string>
    <string name="newPassword">Create new password</string>
    <string name="enterNewPassword">New Password</string>
    <string name="updatePassword">Update Password</string>
    <string name="confirmDeleteAccount">Confirm Delete Account</string>

    <string name="personalizationMessage">Need special offers? Fill this out</string>
    <string name="logout">Logout</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="save">Save</string>
    <string name="dailyOfferImage">Daily Offer Image</string>
    <string name="daySpecialHeading">Monday Special</string>

    <string name="dailyOffer">Get 50% off any deep-dish • Three-course meal @ 250 • Save Rs. 100 at Pepperoni pizza deal</string>
    <string name="location">Location</string>
    <string name="goraya">Goraya</string>
    <string name="nakodar">Nakodar</string>
    <string name="enterPhoneNumber">Enter Phone Number</string>
    <string name="enterOTP">Enter OTP</string>
    <string name="resendOTP">Resend OTP</string>
    <string name="callNow">Call Now</string>
    <string name="orderOnline">Order Online</string>
    <string name="refreshing">Refreshing, please wait…</string>
    <string name="partner">To partner with us for franchise\nCall @ +91 98788–52710</string>
    <string name="ourLocations">Our Locations</string>
    <string name="gorayaLocation">D18–22 Rupal Market\nRurka Jandiala Road\nGoraya Punjab 144409\nManager – Raman Kumar\n+91 81465–49183</string>
    <string name="nakodarLocation">Shankar Road Near Samra\nOffice Kalar Nagar\nNakodar Punjab 144040\nManager – Randeep Singh Bassi\n+91 98551–55811</string>
    <string name="phagwaraLocation">Coming Soon\nOpening October 2021</string>
    <string name="nurmahalLocation">Opening March 2022</string>
    <string name="jalandharLocation">Opening April 2022</string>
    <string name="openInMaps">Show in Maps</string>
    <string name="phagwara">Phagwara</string>
    <string name="nurmahal">Nurmahal</string>
    <string name="jalandhar">Jalandhar</string>
    <string name="close">Close</string>
    <string name="details">Details</string>
    <string name="aboutUs">About Us</string>
    <string name="aboutUsAndFood">About Us &amp; Our Food</string>
    <string name="aboutUsHeading">Delivering Awesome Since 1999</string>
    <string name="aboutUsPara">It started with a challenge, grew into inquisition and then became an obsession. To make your own food at University after being fed by mother cooking till date was no easy task. Beans on Toast slowly grew to a Full English, frozen pasta dishes soon got substituted for authentic Italian Risotto making my own passata. To cut the story short, I wanted others to enjoy these findings with finger licking food delivered quick and easy from a local serving restaurant without compromising on taste, ingredients and service. A move from the UK in 2013 gave me the opportunity to fill a great void and Figo’s was born. The rest as they say….. is HISTORY.</string>
    <string name="beOurPartner">Be Our Partner</string>
    <string name="partnerWithUs">Partner With Us</string>
    <string name="franchiseHeading">Experience The Success Our Franchisees Are Having With Us</string>
    <string name="franchisePara">FIGO’s means allot to us the founders, and we have invested heavily to make sure that the brand stays true and that every partner enjoys the journey to success.
Rupal Leisure Pvt Ltd is looking for like minded partners take FIGO’S to new heights giving franchisees financial freedom whilst serving the nation with finger licking food.</string>
    <string name="franchiseOffer">Do you want to get involved?</string>
    <string name="franchiseInvolve">Get Involved</string>
    <string name="readMore">Read More</string>

</resources>